--- a/src/style/index.css
+++ b/src/style/index.css
@@ -2,16 +2,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin:0;
+  font-family: 'Lato', sans-serif;
+  font-family: 'Mukta', sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Pacifico', cursive;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Raleway', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Flex', sans-serif;
+  font-family: 'Roboto Mono', monospace;
+  font-family: 'Roboto Serif', serif;
+  font-family: 'Roboto Slab', serif;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.text-red{
+  color:rgba(255, 0, 0, 1);
+}
+.bg-red{
+  background-color:rgba(255, 0, 0, 1);
 }
