--- a/src/style/index.css
+++ b/src/style/index.css
@@ -36,3 +36,8 @@ body {
     align-items: center;
     justify-content: center
 }
+
+.card:hover .card-hover{
+opacity: 1;
+transition: all 0.4s ease;
+}
